--- a/HR_Management.Application/HR_Management.Application.csproj
+++ b/HR_Management.Application/HR_Management.Application.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <Folder Include="Features\LeaveTypes\Handlers\Commands\" />
+    <Folder Include="Features\LeaveTypes\Requests\Commands\" />
   </ItemGroup>
 
 </Project>
