--- a/HR_Management.Infrastructure/HR_Management.Infrastructure.csproj
+++ b/HR_Management.Infrastructure/HR_Management.Infrastructure.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HR_Management.Application\HR_Management.Application.csproj" />
+  </ItemGroup>
+
 </Project>
