set jwt settings

--- a/HR_Management.Api/appsettings.json
+++ b/HR_Management.Api/appsettings.json
@@ -9,5 +9,10 @@
     }
   },
   "AllowedHosts": "*",
-  "JwtSetting": ""
+  "JwtSetting": {
+    "Key": "3a7553548c8b477a909039d5c7f9f5ff",
+    "Issuer": "HR_Management",
+    "Audience": "HR_ManagementUser",
+    "Duration": 60
+  }
 }
